[tool.poetry]
name = "world-of-dypians-chest"
version = "0.1.0"
description = ""
authors = ["iRatatuii"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
web3 = "^6.15.1"
requests = "^2.31.0"
eth-account = "^0.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
